<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/hello_twitter" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/hello_label"
        android:background="@android:color/holo_purple"
        android:textSize="20sp"
        android:padding="10dp"
        android:textStyle="bold"
        android:textColor="@android:color/holo_orange_light" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hello_label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout"
        android:layout_marginTop="25dp">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/lbl_username"
            android:id="@+id/textView" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/usernameFld"
            android:layout_weight="1"
            android:hint="@string/lbl_enter_username"
            android:longClickable="false" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout2"
        android:layout_marginTop="25dp">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/lbl_pwd"
            android:id="@+id/textView2" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passwordFld"
            android:layout_weight="1"
            android:hint="@string/lbl_hint_pwd" />
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_login"
        android:id="@+id/btn_login"
        android:layout_below="@+id/linearLayout2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp" />
    <!--<com.twitter.sdk.android.core.identity.TwitterLoginButton
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />-->

</RelativeLayout>
